--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,7 @@
     "react-markdown": "^8.0.3"
   },
   "devDependencies": {
-    "eslint": "8.23.0",
+    "eslint": "^8.24.0",
     "eslint-config-next": "12.2.5"
   }
 }
