--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,8 @@
     "@strapi/plugin-users-permissions": "4.4.1",
     "@strapi/provider-upload-cloudinary": "^4.4.1",
     "@strapi/strapi": "4.4.1",
-    "better-sqlite3": "7.4.6"
+    "better-sqlite3": "7.4.6",
+    "pg": "^8.8.0"
   },
   "author": {
     "name": "A Strapi developer"
