--- a/backend/package.json
+++ b/backend/package.json
@@ -25,7 +25,7 @@
     "uuid": "46e00834-8258-452c-8417-e709fc1508d9"
   },
   "engines": {
-    "node": ">=14.19.1 <=18.x.x",
+    "node": ">=14.19.1 <=16.17.1",
     "npm": ">=6.0.0"
   },
   "license": "MIT"
