--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,8 @@
     "@strapi/provider-upload-cloudinary": "^4.4.1",
     "@strapi/strapi": "4.4.1",
     "better-sqlite3": "7.4.6",
-    "pg": "^8.8.0"
+    "pg": "^8.8.0",
+    "strapi-plugin-generate-data": "^1.0.18"
   },
   "author": {
     "name": "A Strapi developer"
