--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,9 @@
     "@strapi/strapi": "4.4.1",
     "better-sqlite3": "7.4.6",
     "pg": "^8.8.0",
-    "strapi-plugin-generate-data": "^1.0.18"
+    "strapi-plugin-ezforms": "^0.1.2",
+    "strapi-plugin-generate-data": "^1.0.18",
+    "strapi-provider-email-sendinblue": "^4.0.0"
   },
   "author": {
     "name": "A Strapi developer"
