--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-google-recaptcha": "^2.1.0",
+    "react-google-recaptcha-v3": "^1.10.0",
     "react-markdown": "^8.0.3"
   },
   "devDependencies": {
