--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,5 @@
 REACT_APP_SITE_KEY=6LezWnIiAAAAABYlpXZ1fPtLln1ndusNCNdrudQ6
 REACT_APP_SECRET_KEY=6LezWnIiAAAAABTL5WCtMw0bkM-Xw13N9seAulBG
+
+V_TWO_SITE_KEY=6Ld41XoiAAAAAMtiYBxrJrXiCiHmTg4hxETJazie
+V_TWO_SECRET_KEY=6Ld41XoiAAAAAHkI8PIk1AKYjcZ4fs1XLddy4TZ8
