--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "axios": "^1.1.2",
+    "formdata-node": "^5.0.0",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-google-recaptcha": "^2.1.0",
     "react-google-recaptcha-v3": "^1.10.0",
-    "react-markdown": "^8.0.3"
+    "react-markdown": "^8.0.3",
+    "sib-api-v3-sdk": "^8.2.0"
   },
   "devDependencies": {
     "eslint": "^8.24.0",
