--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "pg": "^8.8.0",
     "strapi-plugin-ezforms": "^0.1.2",
     "strapi-plugin-generate-data": "^1.0.18",
+    "strapi-plugin-import-export-entries": "^1.18.0",
     "strapi-provider-email-sendinblue": "^4.0.0"
   },
   "author": {
